# work

claude-tools/: README.md
claude-tools/agents/: dev.md  po.md  qa.md  tech-lead.md
claude-tools/commands/: add-task.md  new-project.md  start-task.md  update-task.md
claude-tools/docs/: README.md  agents.md  mcp.md  rtk.md  skills.md
echo/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
echo/backend/: .env.example  config.py  echo-backend.spec  ingest.py  main.py  query.py  requirements.txt  search.py  server.py
echo/scripts/: build-mac.sh  build.sh  gen_icons.py  start-backend-dev.sh
echo/src/: App.tsx  index.css
echo/src-tauri/: Cargo.toml  tauri.conf.json
echo/src-tauri/icons/: icon.icns
echo/src-tauri/src/: main.rs
echo/src/api/: backend.ts
echo/src/components/: ChatWindow.tsx  DropZone.tsx  IngestProgress.tsx  MessageInput.tsx  OllamaGate.tsx  Sidebar.tsx  Toast.tsx
echo/src/types/: index.ts
