[package]
name = "echo"
version = "0.1.0"
description = "Echo — Assistant IA local privacy-first"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "dialog-open",
  "http-request",
  "shell-open"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# ---------------------------------------------------------------------------
# Profil de release — optimisé pour taille et performance
# ---------------------------------------------------------------------------
[profile.release]
# Optimisation maximale (temps de compilation plus long, binaire plus rapide)
opt-level = 3
# Link-time optimisation — réduit significativement la taille du binaire
lto = true
# Un seul "codegen unit" = meilleure LTO, binaire plus petit
codegen-units = 1
# Supprime les symboles de debug (non utiles en prod)
strip = "symbols"
# Panique → abort (pas de stack unwinding = binaire plus petit)
panic = "abort"
