[package]
name = "echo"
version = "0.1.0"
description = "Echo — Assistant IA local privacy-first"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "dialog-open",
  "http-request",
  "shell-open",
  "shell-sidecar",       # Démarre le backend Python (sidecar)
  "process-command-api", # API tauri::api::process::Command
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# ---------------------------------------------------------------------------
# Profil de release — optimisé pour taille et performance
# ---------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
